# datalogger

./: .gitignore  LICENSE.md  README.md
broker/: README.md
documents/: README.md
documents/ESP32/: FLOW_DIAGRAM_ESP32.md  UML_CLASS_DIAGRAM_ESP32.md
documents/STM32/: FLOW_DIAGRAM.md  FLOW_DIAGRAM_STM32.md  SEQUENCE_DIAGRAM_STM32.md  UML_CLASS_DIAGRAM_STM32.md
documents/esp32/: FLOW_DIAGRAM_ESP32.md  README.md  SEQUENCE_DIAGRAM_ESP32.md  UML_CLASS_DIAGRAM_ESP32.md
documents/esp32/diagrams/: Configuration_Constants_1.puml  Overall_System_Class.puml  System_Startup_Flow.puml  object_lifecycle.puml  overall_state_machine.puml  retry_logic.puml
documents/esp32/diagrams/flow_diagrams/: Button_Press_Processing.puml  MQTT_Connection_State_Machine.puml  MQTT_Message_Processing.puml  (+5 more)
documents/firmware/: ARCHITECTURE_DIAGRAM_FIRMWARE.md  FLOW_DIAGRAM_FIRMWARE.md  README.md  SEQUENCE_DIAGRAM_FIRMWARE.md  UML_DIAGRAM_FIRMWARE.md
documents/stm32/: FLOW_DIAGRAM_STM32.md  README.md  SEQUENCE_DIAGRAM_STM32.md  UML_CLASS_DIAGRAM_STM32.md
documents/web/: FLOW_DIAGRAM_WEB.md  README.md  SEQUENCE_DIAGRAM_WEB.md  UML_DIAGRAM_WEB.md
firmware/: README.md
firmware/ESP32/: README.md  sdkconfig  sdkconfig.defaults
firmware/ESP32/components/: README.md
firmware/ESP32/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/STM32/: FLOW_DIAGRAM.md  README.md  SEQUENCE_DIAGRAM.md  STM32_DATALOGGER.ioc  UML_CLASS_DIAGRAM.md
web/: COAP_INTEGRATION.md  README.md  Task.txt  app.css  app.js  index.html  index_final.html  index_modular.html  script.js  style.css
(+150 files in other folders)
